add ability set validation options in http api
